// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProfileMenuCollapsedComponent matches snapshot 1`] = `
<div
  className="usa-grid-full profile-menu profile-menu-collapsed"
>
  <div
    className="menu-title"
  >
    <button
      className="unstyled-button"
      onClick={[Function]}
      title="Expand menu"
    >
      <FontAwesome
        name="exchange"
      />
    </button>
  </div>
  <NavLinksContainer>
    <withRouter(NavLink)
      hidden={false}
      iconName="user"
      link="/profile/dashboard/"
      search=""
    />
    <withRouter(NavLink)
      hidden={false}
      iconName="book"
      link="/profile/glossaryeditor/"
      search="?type=all"
    />
    <withRouter(NavLink)
      hidden={false}
      iconName="comments-o"
      link="/profile/inbox/"
      search=""
    />
    <withRouter(NavLink)
      hidden={false}
      iconName="globe"
      link="/profile/notifications/"
      search=""
    />
    <withRouter(NavLink)
      hidden={false}
      iconName="users"
      link="/profile/contacts/"
      search=""
    />
    <withRouter(NavLink)
      hidden={false}
      iconName="file-text"
      link="/profile/documents/"
      search=""
    />
  </NavLinksContainer>
</div>
`;

exports[`ProfileMenuCollapsedComponent matches snapshot when isGlossaryEditor is false 1`] = `
<div
  className="usa-grid-full profile-menu profile-menu-collapsed"
>
  <div
    className="menu-title"
  >
    <button
      className="unstyled-button"
      onClick={[Function]}
      title="Expand menu"
    >
      <FontAwesome
        name="exchange"
      />
    </button>
  </div>
  <NavLinksContainer>
    <withRouter(NavLink)
      hidden={false}
      iconName="user"
      link="/profile/dashboard/"
      search=""
    />
    <withRouter(NavLink)
      hidden={true}
      iconName="book"
      link="/profile/glossaryeditor/"
      search="?type=all"
    />
    <withRouter(NavLink)
      hidden={false}
      iconName="comments-o"
      link="/profile/inbox/"
      search=""
    />
    <withRouter(NavLink)
      hidden={false}
      iconName="globe"
      link="/profile/notifications/"
      search=""
    />
    <withRouter(NavLink)
      hidden={false}
      iconName="users"
      link="/profile/contacts/"
      search=""
    />
    <withRouter(NavLink)
      hidden={false}
      iconName="file-text"
      link="/profile/documents/"
      search=""
    />
  </NavLinksContainer>
</div>
`;
